<resources>
    <string name="app_name">Tarefas+</string>

    <!--    Status Task -->
    <string name="status_task_todo">A Fazer</string>
    <string name="status_task_doing">Fazendo</string>
    <string name="status_task_done">Feitas</string>

    <!--   Generic-->
    <string name="txt_title_warning">Atenção</string>
    <string name="btn_title_warning">Entendi</string>
    <string name="email_empty">Preencha seu e-mail</string>
    <string name="email_text">E-mail</string>
    <string name="password_text">Senha</string>
    <string name="password_empty">Preencha sua senha</string>
    <string name="hint_edit_email">Digite seu e-mail</string>
    <string name="hint_edit_password">Digite sua senha</string>
    <string name="save_success">Salvo com sucesso</string>
    <string name="txt_list_task_empty">Nenhuma tarefa cadastrada</string>
    <string name="txt_list_task_load">Aguarde, carregando informações</string>
    <string name="task_delete_success">Tarefa deletada com sucesso</string>
    <string name="title_button">Confirmar</string>
    <string name="title_task_delete_info">Tem certeza de que deseja deletar esta tarefa?</string>
    <string name="title_task_delete_confirm">Aperte em confirmar para deletar a tarefa!</string>

    <!--    Login Fragment-->
    <string name="txt_btn_login">Login</string>
    <string name="txt_register_login">Criar Conta</string>
    <string name="txt_recover_login">Recuperar Conta</string>

    <!--    Register Fragment -->
    <string name="txt_register_email">Preencha um e-mail válido</string>
    <string name="txt_register_password">Preencha uma senha</string>
    <string name="btn_register_title">Criar conta</string>
    <string name="txt_register_toolbar">Criar conta</string>
    <string name="txt_register_password_repeat">Repita a senha</string>
    <string name="txt_register_password_repeat_empty">Campo repita a senha não preenchido</string>
    <string name="txt_register_password_repeat_error">Senhas estão diferentes, Corrija!</string>

    <!--    Error Firebase Authentication-->
    <string name="account_not_register">Nenhuma conta encontra com este e-mail. </string>
    <string name="email_invalid_">Insira um e-mail válido. </string>
    <string name="password_invalid_">Senha inválida, tente novamente. </string>
    <string name="this_email_used">Este e-mail já está em uso. </string>
    <string name="enter_password_stronger">Insira uma senha mais forte. </string>

    <!--    Recover Account Fragment-->
    <string name="txt_info">Informe seu e-mail de cadastro para recuperar sua conta</string>
    <string name="txt_title_toolbar">Recuperar conta</string>
    <string name="txt_btn_recover">Recuperar conta</string>
    <string name="title_message_recoverAccount">Acabamos de enviar um link de recuperação para seu e-mail.</string>

    <!--    Home Fragment-->
    <string name="title_dialog">Tem certeza que deseja deslogar?</string>
    <string name="title_message">Aperte em confirmar para deslogar</string>

    <!--    Form Task Fragment -->
    <string name="txt_description">Preencha uma descrição</string>
    <string name="hint_description">Criar nova tela de login</string>
    <string name="title_description">Criar Tarefa</string>
    <string name="txt_description_title">Descrição</string>
    <string name="txt_status_description">Status</string>
    <string name="txt_btn_description">Salvar</string>
    <string name="error_save">Erro! tente novamente mais tarde</string>
    <string name="edit_task">Editando tarefa</string>
    <string name="update_task">Tarefa atualizada com sucesso</string>
    <string name="details_form_task">Detalhes</string>
    <string name="hint_title_details_form_task">Adicione aqui os detalhes da sua tarefa</string>


    <!-- InformationFragment -->
    <string name="title_information">Informações da Tarefa</string>
    <string name="txt_description_information">Descrições</string>
    <string name="txt_get_information_todo">Status: A Fazer</string>
    <string name="txt_get_information_doing">Status: Fazendo</string>
    <string name="txt_get_information_done">Status: Feita</string>
    <string name="txt_get_description_information">Descrição da tarefa: %s</string>
    <string name="txt_details_information">Nenhum detalhe registrado</string>

    <!--    Bottom Sheet-->
    <string name="bottom_sheet_message">Mensagem</string>

    <!--    Item Task-->
    <string name="item_title_task_description">Criar Layout de Login</string>
    <string name="item_task_delete">Remover</string>
    <string name="item_task_edit">Editar</string>
    <string name="item_task_information">Informações</string>
    <string name="item_icon_back">back</string>
    <string name="item_icon_next">next</string>



</resources>